working on functionalities

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body{
 #nav i{
     font-size: 30px;
     font-weight: 800;
+    cursor: pointer;
 }
 
 #full{
@@ -67,4 +68,5 @@ body{
     padding: 5px;
     font-weight: 800;
     font-size: 20px;
+    cursor: pointer;
 }
